frontend/src/components/EventPages/eventform.css
.event-form-body {
    display: flex;
    width: 100%;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}

.event-form-body .high-inputs {
    height: 55.2px;
}

.event-form-body select {
    display: block;
}

#event-submit-bar {
    padding: 10px 0px 10px 0px;
    position: sticky;
    z-index: 1;
    bottom: 0px;
    width: 100%;
    display: flex;
    justify-content: space-around;
    background-color: white;
}

.event-group {
    color:rgb(33, 33, 33);

    margin: 5px 0px 5px 0px;
}

.attendee-count {
    margin-top: 25px;
}

#is-online-checkbox {
    margin: 1.5rem 0.5rem 1.5rem 0.5rem;
}

.date-label {
    color: rgb(0, 152, 171);
    font-size: 14px;
    font-weight: 500;
    text-transform: uppercase;
    word-spacing: 1.4px;
    line-height: 20px;
    font-family: "Graphik Medium";
}

.event-panel-title {
    color: rgb(33, 33, 33);
    font-size: 20px;
    line-height: 24px;
    font-family: 'Graphik Bold';
}

.event-panel-description {
    padding-top: 20px;
    color: rgb(33, 33, 33);
    font-size: 14px;
    line-height: 20px;

}
.event-panel {
    margin-bottom: 30px;
    background: #fff;
    border: 1px solid rgba(46, 62, 72, 0.12);
    border-radius: 8px;
    /* box-sizing: border-box; */
    display: block;
    min-height: 160px;
    padding: 10px;

}

.event-show-header {
    background-color: #fff;
    padding-top: 25px;
    padding-left: max(calc((100vw - 1080px) / 6), 20px);
}

.organizer-tag {
    display: flex;
    gap: 10px;
    margin-bottom: 25px;
    align-items: center;
}

.host-caption {
    font-family: "Graphik Medium";
}

.host-caption-container {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.user-symbol {
    font-size: 5vw;
    color: rgb(0, 130, 148);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.event-show-body {
    padding-left: max(calc((100vw - 1080px) / 6), 20px);
    background-color: #f6f7f8;
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    margin-bottom: 100px;
}

.event-show-left {
    padding-right: 20px;
    padding-top: 20px;
    /* min-width: 400px; */
}

#edit-event-button {
    position: absolute;
    right: 20px;
}

.event-show-right {
    width: 25vw;
    box-sizing: content-box;
    padding: 20px;
    display: flex;
    flex-direction: column;

}

.event-info-container {
    margin-top: 20px;
    margin-bottom: 20px;
    border-radius: 20px;
    background-color: #fff;
    display: flex;
    flex-direction: column;
}

.event-info-section {
    display: flex;
    flex-direction: row;
    align-items:baseline;
    margin-right: 20px;
}

.event-icons {
    padding: 20px;
    width: 24px;
}

.bottom-event-bar {
    padding: 20px;
    display: flex;
    justify-content: space-between;
    position: fixed;
    bottom: 0px;
    background-color: #fff;
    width: 100%;
    box-sizing: border-box;
    height: 94px;
}

.bottom-event-left, .rsvp-info {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.bottom-event-date {
    font-size: 16px;
    text-transform: uppercase;
}
.bottom-event-title {
    font-family: "Graphik Medium";
}

.organizer-dropdown {
    display: none;
    flex-direction: column;
    position: absolute;
    margin-left: 20px;
    padding: 12px, 16px, 12px, 16px;
    border: 1px solid rgb(217, 217, 217);
    border-radius: 4px;
    box-shadow: 0 10px 15px -3px rgba(0,0,0,.1),0 4px 6px -4px rgba(0,0,0,.1);
    background-color: white;
}

hr {
    border-bottom-width: 1px;
    margin-bottom: 0.5rem;
    color: inherit;
}

.organizer-tools {
    cursor: pointer;
    margin: 20px;
    border: 2px solid gray;
    border-radius: 8px;
    padding: 10px;
    text-align: center;
}

.organizer-dropdown ul > li {
    padding: 16px 24px 16px 24px;
    cursor: pointer;
}

.dropdown-text {
    margin-left: 10px;
}

.organizer-dropdown ul > li:hover {
    background-color: #e6e6e6;
    color:rgb(0, 130, 148);
}

.organizer-dropdown li:first-of-type {
    margin-top: 0px;
}


@media screen and (max-width: 950px) {
    .event-show-body {
        display: block;
        
    }
    .event-show-right {
        flex-direction: column-reverse;
        width: 100%;
    }
    
}

